tests/NormalTests/paczka1/fuzzy1/93581176.err
Error in line 17: ImLI S79 50,55
Error in line 20: ImLI S79 104,0
